force-app/main/default/objects/Repayment_Agreement__c/Repayment_Agreement__c.object-meta.xml
<CustomObject>
    <label>Repayment Agreement</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Repayment Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>