force-app/main/default/objects/Repayment_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The buyer account that is linked to a repayment.</description>
    <inlineHelpText>The buyer account that is linked to a repayment.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Repayment Agreements</relationshipLabel>
    <relationshipName>Repayment_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>