force-app/main/default/objects/Repayment_Agreement__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Information to be inputted by users to understand the agreement better. Images and links are allowed in this text area.</description>
    <inlineHelpText>Information to be inputted by users to understand the agreement better. Images and links are allowed in this text area.</inlineHelpText>
    <label>Additional Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>