force-app/main/default/objects/Repayment_Agreement__c/fields/Collected_set_aside_amount__c.field-meta.xml
<CustomField>
    <fullName>Collected_set_aside_amount__c</fullName>
    <label>Collected set-aside amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>