force-app/main/default/objects/Repayment_Agreement__c/fields/Date_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Agreement__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date in which the repayment agreement is signed.</description>
    <inlineHelpText>Date in which the repayment agreement is signed.</inlineHelpText>
    <label>Date of Agreement</label>
    <required>true</required>
    <type>Date</type>
</CustomField>