force-app/main/default/objects/Repayment_Agreement__c/fields/Set_Aside_Amount__c.field-meta.xml
<CustomField>
    <fullName>Set_Aside_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount to be used by legal team for any expenses during the lifespan of the agreement.</description>
    <inlineHelpText>Amount to be used by legal team for any expenses during the lifespan of the agreement.</inlineHelpText>
    <label>Set Aside Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>