force-app/main/default/objects/Repayment_Agreement__c/fields/Set_Aside_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Set_Aside_Amount_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to know whether set aside amount has already been paid or not.</description>
    <inlineHelpText>Indicator to know whether set aside amount has already been paid or not.</inlineHelpText>
    <label>Set Aside Amount Paid</label>
    <type>Checkbox</type>
</CustomField>