force-app/main/default/objects/Repayment_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_of_Agreement__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>